update: added channel config
